# ChangeLog for dev-libs/openssl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.513 2014/01/26 11:59:33 ago Exp $

  06 Feb 2014; Fabian Groffen <grobian@gentoo.org> openssl-1.0.1e-r3.ebuild,
  openssl-1.0.1e.ebuild, openssl-1.0.1f.ebuild:
  Fix build on Solaris 10, due to broken /bin/sh

  06 Feb 2014; Fabian Groffen <grobian@gentoo.org> openssl-1.0.1e-r3.ebuild,
  openssl-1.0.1e.ebuild, openssl-1.0.1f.ebuild:
  cleanup double work

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> openssl-1.0.1f.ebuild:
  Stable for sparc, wrt bug #497838

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> openssl-1.0.1f.ebuild:
  Stable for ppc64, wrt bug #497838

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> openssl-1.0.1f.ebuild:
  Stable for ia64, wrt bug #497838

  25 Jan 2014; Mike Frysinger <vapier@gentoo.org>
  +files/openssl-1.0.1f-revert-alpha-perl-generation.patch,
  openssl-1.0.1f.ebuild:
  Fix build for alpha systems #499086 by Matt Turner.

  21 Jan 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> openssl-1.0.1f.ebuild:
  x86 stable wrt security bug #497838

  20 Jan 2014; Agostino Sarubbo <ago@gentoo.org> openssl-1.0.1f.ebuild:
  Stable for ppc, wrt bug #497838

  19 Jan 2014; Agostino Sarubbo <ago@gentoo.org> openssl-1.0.1f.ebuild:
  Stable for alpha, wrt bug #497838

  19 Jan 2014; Markus Meier <maekke@gentoo.org> openssl-1.0.1f.ebuild:
  arm stable, bug #497838

  18 Jan 2014; Pacho Ramos <pacho@gentoo.org> openssl-1.0.1f.ebuild:
  amd64 stable, bug #497838

  17 Jan 2014; Jeroen Roovers <jer@gentoo.org> openssl-1.0.1f.ebuild:
  Stable for HPPA (bug #497838).

  17 Jan 2014; Mike Frysinger <vapier@gentoo.org> files/gentoo.config-1.0.1,
  openssl-1.0.1f.ebuild:
  Initial arm64 and little endian ppc support.

  17 Jan 2014; Mike Frysinger <vapier@gentoo.org> openssl-1.0.1f.ebuild:
  Mark m68k/s390/sh stable #497838.
