@@ -65,18 +65,30 @@ DIST openssl-1.0.0j.tar.gz 4047852 SHA256 626fb8fcb3eb7e966edbe71553ff993d137f6e
 DIST openssl-1.0.1c.tar.gz 4457113 SHA256 2a9eb3cd4e8b114eb9179c0d3884d61658e7d8e8bf4984798a5f5bd48e325ebe SHA512 14f766daab0828a2f07c65d6da8469a4a5a2b839ff3da188538c4e2db3e3e2f37217fb37e269617fb438463b75fb77dab0b155f36831ff48edbc9e7f2903ebd3 WHIRLPOOL 15f90cd981ed82cb1891a2e4179a15882f34aa0ecfff7e6a4fa435b9ea021168228504e7cd9e201c8ada1207942784558f2696f5d45293fa876cf143d8826bf7
 DIST openssl-1.0.1e.tar.gz 4459777 SHA256 f74f15e8c8ff11aa3d5bb5f276d202ec18d7246e95f961db76054199c69c1ae3 SHA512 c76857e439431b2ef6f2aa123997e53f82b9c3c964d4d765d7cc6c0c20b37a21adf578f9b759b2b65ae3925454c432a01b7de0cd320ece7181dc292e00d3244e WHIRLPOOL e85cca98d9525935977bab00a1309682c0571973a1472cdd75ea1c96a1b12d8b86d1b51a501bc24a6fdbf3257b047a569b5d24d6164a903af689b01d46a7e428
 DIST openssl-1.0.1f.tar.gz 4509212 SHA256 6cc2a80b17d64de6b7bac985745fdaba971d54ffd7d38d3556f998d7c0c9cb5a SHA512 8a50892ce0c32707486e248b273631c38e9743371f28f96b635a9e61dac31919e5cf00690d0926c1f425c718cb56c4fe18a87c6e679e0543ad453e42f7a811ef WHIRLPOOL 4489061d7348a53ed23fd01fbaf36b701c5a17968a4811cf0289aa8604752b1e3b3f4ed53ac629db3948d58fab1d9e0efdae5f6cde39a78828dd8b220fdb3900
+DIST openssl-1.0.1g.tar.gz 4509047 SHA256 53cb818c3b90e507a8348f4f5eaedb05d8bfe5358aabb508b7263cc670c3e028 SHA512 66ebbad3c8ad98a07b486d39d0c3ae62b00133f8f2877cf8b97c461e7c7f40b29cf9c3cae82cf73a92dcf1daa63d33aa76c910fbcbe60158589fc7cb48f41e6d WHIRLPOOL 6bfb30d1f41b051f794e2eb80ad9116b064f6d464c22698538c4e16b85739b80744387ca160fd1a86b92814b5b1b3fc7d0658a709942b7b31b198da8cce37056
 DIST openssl-c_rehash.sh.1.7 4167 SHA256 4999ee79892f52bd6a4a7baba9fac62262454d573bbffd72685d3aae9e48cee0 SHA512 55e8c2e827750a4f375cb83c86bfe2d166c01ffa5d7e9b16657b72b38b747c8985dd2c98f854c911dfbbee2ff3e92aff39fdf089d979b2e3534b7685ee8b80da WHIRLPOOL c88f06a3b8651f76b6289552cccceb64e13f6697c5f0ce3ff114c781ce1c218912b8ee308af9d087cd76a9600fdacda1953175bff07d7d3eb21b0c0b7f4f1ce1
 EBUILD openssl-1.0.0j.ebuild 9482 SHA256 b66f5ad45af55bae0db44d71f490a61f33ad676273a5f12fbac7a6f88998d59b SHA512 3d825d6a84c67d77ac22f051944cc742693a666401cc36abf58ac7e8ffa525bd77624d4f855e41e2e3c1664a1d1dde5c64cdf01573727f0c1e1e47951255df52 WHIRLPOOL 87aef5ae3d68e198c334619d719ec5461804c8bc5b9d2f80edc465bbedeadd261fd79e71f170fbbb76bcf991c6c8b2a444473d5b116cd0194eb6501fb031317a
 EBUILD openssl-1.0.1c.ebuild 9794 SHA256 acc05b93d7bd6f3e30bd2e3edf9a91eb594b6da7baa4476d718608da1c4a8ecf SHA512 4727b270502099477170f3972ce88d4f1f31a664da7c4633dd74d63384dcc213a4604753819ab54e24404a5f7b4b43e6cc17e3663e9738f7834b6ee1a0b194cb WHIRLPOOL 4d64b2d8400cc8ae8598ccc76f255b8e849a9fccb6c43d2efaba0fb297c85f262b37e66c74bc4fe8eb01321bd95ae6a6e801224472215703a1fed6ec5635c9c1
 EBUILD openssl-1.0.1e-r3.ebuild 10774 SHA256 e9931434e244d3edc32df93646fb2674c98779c8bbd8ea3a9fca7e3ef259d4df SHA512 095c81afd0fc266c4046969425f26900d5b70acc09e2e89ff3d54c8d30e924c2017d2f1680a3a668d4cad446f1a03697f35ab5042f4fc51428d52747ca39f4ae WHIRLPOOL 70b2ae62a4911931093f149bb0ec4fddeced95624c2ba15d37a80a548f917a03c58468507c09ff9a7d3d5eb8a63433cbe4022b95ec8b712dcae8ce8cb07c8485
 EBUILD openssl-1.0.1e.ebuild 9886 SHA256 231e8bdfdab056e4898808cf95fda1c20043f1af75a17ee0ff02edd23defd163 SHA512 a0cffa39ad2c33d23ee548cf14189952b70fe0e7755e4ae55d032b4adf1cc2697719e20730599572b48396dd29620869a42e4b4989d87fb72620aeb68380d382 WHIRLPOOL 8394ebd9590e8d7c2ac6c930b8d30540f63c60436c1542b12c87ae4a65a383ddf4dec1a0b0b438fe6269959cde06e721f905e48176cc0c8405e3866eba3c847d
 EBUILD openssl-1.0.1f.ebuild 10685 SHA256 e9d2c7e78d6c233c7ad29c8e79eb23772f2423c9a7bc3ab0b14d0aef039343fe SHA512 ebf419df8f84ee229518a1541b82c6cd71218f6c669427f8115dfdf5f3c0b731ee0682011cc5e2d61db68fd9a9cd6474c6c88551926867bc2b4bafb1ef82bd11 WHIRLPOOL 8ef1751c01fe7b716a088fa93777469b533fc4cd6c2728c6e0d04f94a4604357b09ffa94a5c5de94339564326cf43278f1aae1ece3bcf23dd9108930ea4034d5
-MISC ChangeLog 78767 SHA256 0f412bdde8d36a0a335714f33f70962869bc8912b0f5b3168da7b9ef714191f7 SHA512 640461700d22298b9c1143c4be2476e37d4dcc9dcf31f17564982f64a87a5f8cf18a0204ebdba32d1dccac64aa2c0f259ded200cb3258adbbbdd38c0e781b894 WHIRLPOOL 27fdfcc2b305aea21e5ad11594f24c0fbff536b97c851f93342811f8bfece187eca082fb64ca807445449ead05777008592af0610d02518c813c98ced6d947be
+EBUILD openssl-1.0.1g.ebuild 10685 SHA256 f3e6a43182d838a1b7fa8de5029ed1a5660c3617c1a53eeec6485d6183444f46 SHA512 c5f2528a35f8f1bd4a1b18332558c438c394bceb63f6314f1073561783caaf4884085f2aac2bcde4ebc16b4fedf281b4c88db6547ba4522ba5e66a144968e51d WHIRLPOOL 31b609f706d21e1b2f79eee12f5767755c754ffd93e9c98bc9ecb373f3150c970970fdcf9905a6ccc96b224cf247b1914e6b2f14dbb2932cdafb2dbdcd02e0e0
+MISC ChangeLog 78915 SHA256 1b7873d1556af131c518e4b30cd3458b14571bf1bf26466c6e63ff418bd0f009 SHA512 3c7c5ff6e208d6a58e3f04c45ca725fd4c969a21ad96ace334cf1ac6b740038a183ac2be3c2f5082f62acdfc30dc2e81adc9dc17f8d8929ea7fbf7093caa19b9 WHIRLPOOL d999f296ecb123ed85f294d9ff24d4d5bc2ab6b9adda4ab89cc2d8359f196e2bc8e7dfbb3b8b3ed517c6bbb262749b368aa7ab409dfb0b50747dbea634c12a35
 MISC metadata.xml 537 SHA256 dfb61bab6de1d7e943f92be14ed54fb9275d568a11d6ba29e395f23f547603ee SHA512 0417c438c7f9586c7bbe7694707fec94f2ecf6fb59e36bc87d707fab0b24346a6c9fac5e58c69302e767cd8a7e50a508cdb2430b2cdf8fcc88921286e09756e1 WHIRLPOOL 0f21bab1258c7ee675c27cb7d78a90985437dc8d001a232661657549cebd9f2f26802686435bdd3a1346c5a0ff14bfffa740d6ded2288dc211ad0183f5b3f686
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (Darwin)
+Version: GnuPG v1.4.10 (GNU/Linux)
 
-iEYEAREIAAYFAlL0e7IACgkQX3X2B8XHTonIagCePaHShHRUTUJ58k7bwTxlIZ6X
-rUkAn0acxt86BG4pQdPaNXzLSDJZrZta
-=7wdf
+iQIcBAEBCAAGBQJTTWBjAAoJEMcu9QQQ+wFr9AsP/3gjzJH8tp8oSoBbSaNtMc4a
+wD4UCJg8mNp5rQy8RNu2qG9ua0BWwfFM0sc349nhSq3+yQw0bc606f6rIzcs0opn
+cFumrdA8D8YRWalv3Ro/f54lVGVXpmlvKJQkkdrZGSluKYIyHAd1IKLX8pL83FiF
+9gFJfFVW9PcMdNDd9eeBUeP8B1aqkJ8bZftC01ZJj8GxzWp87bc11h0TsCtVjJ9J
+TqzoS9q1QMdGB/tq0dm5wFizVdDsYc9qKdtXST1bmpXeXMPTUwx9akAvS4HoLrKL
+z08zN/4uFtigxDPNNxkabuBbrFJihLwIPYnMmT0lI4Z8OsK7825Jpg1Bn+NTE01M
+JykOQ9pOJeJ48FwGYNTbdXVvPCJKwjsIrdhSz9XwNaUeDQ4iRL/q9MnbObDHTV5f
+eDZlU8wdwoHlDJKhByo/vzKDY9st5YEJMHN5ur9gOEhoHW2H48bCfwIIS5l9VUrp
+EtcYDkYSA0FjiAw8/wNbwkPrRPs5IvhVC3sWe8u++8PK7BCpqHqIryu9pP+VGaJI
+siYBIKYpNZAYZQhRu0DRpQ6YdqvLZX4epQNKFrFQns7J/E6ttPci23BmcaCJK708
+hMsWq6W1aO7icfimCuTSlxiT9Nx0+jhBYYY3WFnm1Oa1eeWvMq8scLzofAwFdTna
+OnnB+/FvEoYuIBkjmtNW
+=CRNC
 -----END PGP SIGNATURE-----
